--- a/app/templates/components/people-list.hbs
+++ b/app/templates/components/people-list.hbs
@@ -1,7 +1,9 @@
 <h2>{{@title}}</h2>
 
 <ul>
-    {{#each @people as |person| }}
-    <li>{{person}}</li>
+    {{#each @people as |person|}}
+    <li {{action "showPerson" person}}>
+        {{person}}
+    </li>
     {{/each}}
 </ul>
